2019-05-28  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82132: Composer install fails with additional languages required at the same time

2019-05-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87983: The name of capital of Ukraine should be 'Kyiv'
	* Resolves #87943: Change Country Name Macedonia to North Macedonia
	* Resolves #87877: LocalizationUtility missing import for TYPO3\CMS\Core\Site\Entity\SiteLanguage in TYPO3 9 LTS

2019-01-04  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87243: Constant editor fails with class not found exception
	* Resolves #87329: Fix non-UTF-8 character in ext_emconf
	* Resolves #87330: Fix wrong array access to $emConf['version']
	* Update version to 6.7.4

2018-12-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86991: Language pack generation fails with fatal error
	* Resolves #87225: Add Kosovo user-defined country code

2018-10-25  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86710: Crash in PHP 7.0 due to nullable return type
	* Resolves #86723: Autoformat the code
	* Update version to 6.7.2

2018-10-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86706: Avoid reference to PHP constant TAB
	* Resolves #86707: Use @TYPO3\CMS\Extbase\Annotation\ORM\Lazy annotation

2018-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86694: Avoid constant TYPO3_site with TYPO3 9 LTS
	* Resolves #86695: In frontend, localize using current site language when it exists
	* Update version to 6.7.1

2018-10-14  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86610: Add schema migration service and dumping utility
	* Resolves #86654: Migrate extension update script to TYPO3 LTS 9
	* Resolves #84258: Call to a member function getTreeList() on null
	* Update version to 6.6.0
	* Resolves #83722: Installation via Composer does not work correctly
	* Resolves #86656: Change name of Swaziland to Eswatini
	* Update version to 6.7.0
